# vector-knowledge-graph-mcp

./: .cursorrules  .gitignore  .mcp.json  CHANGELOG.md  README.md  acp.json  glama.json  llms.txt  package.json  pyproject.toml  server.json  server.py  smithery.yaml
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependabot-auto-merge.yml  mcp-smithery-publish.yml  scorecard.yml  test.yml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
